force-app/main/default/objects/df_journal_se_new__c/df_journal_se_new__c.object-meta.xml
<CustomObject>
    <description>Journal for DFJ Sverige (New)</description>
    <label>Journal SE (New)</label>
    <nameField>
        <label>Journal SE (New) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal SE (New)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>