force-app/main/default/objects/df_journal_se_new__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal SE (New)s</relationshipLabel>
    <relationshipName>Journal_SE_New_s</relationshipName>
    <type>Lookup</type>
</CustomField>