force-app/main/default/objects/df_journal_se_new__c/fields/arvsfrdelning_singel__c.field-meta.xml
<CustomField>
    <fullName>arvsfrdelning_singel__c</fullName>
    <label>Arvsfördelning (Singel)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>allt_til_barn_singel</fullName>
                <label>Allt til barn</label>
            </value>
            <value>
                <fullName>procentfrdelning_singel</fullName>
                <label>Procentfördelning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>