force-app/main/default/objects/df_journal_se_new__c/fields/behver_srskilda_villkor_stllas__c.field-meta.xml
<CustomField>
    <fullName>behver_srskilda_villkor_stllas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behöver särskilda villkor ställa 16110</label>
    <type>Checkbox</type>
</CustomField>