force-app/main/default/objects/df_journal_se_new__c/fields/br_framtida_barn_beaktas__c.field-meta.xml
<CustomField>
    <fullName>br_framtida_barn_beaktas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bör framtida barn beaktas?</label>
    <type>Checkbox</type>
</CustomField>