force-app/main/default/objects/df_journal_se_new__c/fields/brllopsdatum__c.field-meta.xml
<CustomField>
    <fullName>brllopsdatum__c</fullName>
    <label>Bröllopsdatum</label>
    <type>DateTime</type>
</CustomField>