force-app/main/default/objects/df_journal_se_new__c/fields/civilstatus__c.field-meta.xml
<CustomField>
    <fullName>civilstatus__c</fullName>
    <label>Civilstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gifta</fullName>
                <label>Gifta</label>
            </value>
            <value>
                <fullName>sambor</fullName>
                <label>Sambor</label>
            </value>
            <value>
                <fullName>singel</fullName>
                <label>Singel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>