force-app/main/default/objects/df_journal_se_new__c/fields/datum_fr_tidigare_upprttat_testa_302__c.field-meta.xml
<CustomField>
    <fullName>datum_fr_tidigare_upprttat_testa_302__c</fullName>
    <label>Datum för tidigare upprättat tes 44652</label>
    <type>DateTime</type>
</CustomField>