force-app/main/default/objects/df_journal_se_new__c/fields/datum_nr_de_flyttade_ihop__c.field-meta.xml
<CustomField>
    <fullName>datum_nr_de_flyttade_ihop__c</fullName>
    <label>Datum när de flyttade ihop</label>
    <type>DateTime</type>
</CustomField>