force-app/main/default/objects/df_journal_se_new__c/fields/Day_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Birth__c</fullName>
    <formula>MID(personnummer_person1__c, 7, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Birth</label>
    <type>Text</type>
</CustomField>