force-app/main/default/objects/df_journal_se_new__c/fields/efternamn_person2__c.field-meta.xml
<CustomField>
    <fullName>efternamn_person2__c</fullName>
    <label>Person 2 Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>