force-app/main/default/objects/df_journal_se_new__c/fields/efternamn_primr_srskild_frvaltar_280__c.field-meta.xml
<CustomField>
    <fullName>efternamn_primr_srskild_frvaltar_280__c</fullName>
    <label>Efternamn 56106</label>
    <length>255</length>
    <type>Text</type>
</CustomField>