force-app/main/default/objects/df_journal_se_new__c/fields/ekonomiska_frhllanden__c.field-meta.xml
<CustomField>
    <fullName>ekonomiska_frhllanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ekonomiska förhållanden</label>
    <type>Checkbox</type>
</CustomField>