force-app/main/default/objects/df_journal_se_new__c/fields/email_person1__c.field-meta.xml
<CustomField>
    <fullName>email_person1__c</fullName>
    <label>Person 1 Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>