force-app/main/default/objects/df_journal_se_new__c/fields/finns_det_onskade_vrdnadshavare__c.field-meta.xml
<CustomField>
    <fullName>finns_det_onskade_vrdnadshavare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finns det oönskade vårdnadshavar e854e</label>
    <type>Checkbox</type>
</CustomField>