force-app/main/default/objects/df_journal_se_new__c/fields/finns_det_srkullbarn__c.field-meta.xml
<CustomField>
    <fullName>finns_det_srkullbarn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finns det särkullbarn?</label>
    <type>Checkbox</type>
</CustomField>