force-app/main/default/objects/df_journal_se_new__c/fields/fretag_p2__c.field-meta.xml
<CustomField>
    <fullName>fretag_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Företag</label>
    <type>Checkbox</type>
</CustomField>