force-app/main/default/objects/df_journal_se_new__c/fields/fri_frfogandertt_eller_full_gand_229__c.field-meta.xml
<CustomField>
    <fullName>fri_frfogandertt_eller_full_gand_229__c</fullName>
    <label>Fri förfoganderätt eller full äg c2c9c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>fri_frfogandertt</fullName>
                <label>Fri förfoganderätt</label>
            </value>
            <value>
                <fullName>full_gandertt</fullName>
                <label>Full äganderätt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>