force-app/main/default/objects/df_journal_se_new__c/fields/frnamn_granskare__c.field-meta.xml
<CustomField>
    <fullName>frnamn_granskare__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>