force-app/main/default/objects/df_journal_se_new__c/fields/frnamn_person1__c.field-meta.xml
<CustomField>
    <fullName>frnamn_person1__c</fullName>
    <label>Person 1 Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>