force-app/main/default/objects/df_journal_se_new__c/fields/fullmaktshavarens_prioritetsordn_276__c.field-meta.xml
<CustomField>
    <fullName>fullmaktshavarens_prioritetsordn_276__c</fullName>
    <label>Fullmaktshavarens prioritetsordn 71885</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>