force-app/main/default/objects/df_journal_se_new__c/fields/gare_av_fastigheter_eller_ngot_a_230__c.field-meta.xml
<CustomField>
    <fullName>gare_av_fastigheter_eller_ngot_a_230__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ägare av fastigheter eller något c8f4e</label>
    <type>Checkbox</type>
</CustomField>