force-app/main/default/objects/df_journal_se_new__c/fields/har_barn__c.field-meta.xml
<CustomField>
    <fullName>har_barn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har barn?</label>
    <type>Checkbox</type>
</CustomField>