force-app/main/default/objects/df_journal_se_new__c/fields/har_du_gjort_ett_testamente_tidi_221__c.field-meta.xml
<CustomField>
    <fullName>har_du_gjort_ett_testamente_tidi_221__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du gjort ett testamente tidi b9507</label>
    <type>Checkbox</type>
</CustomField>