force-app/main/default/objects/df_journal_se_new__c/fields/har_person_2_samma_adress_som_pe_247__c.field-meta.xml
<CustomField>
    <fullName>har_person_2_samma_adress_som_pe_247__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har Person 2 samma adress som Pe b6f9a</label>
    <type>Checkbox</type>
</CustomField>