force-app/main/default/objects/df_journal_se_new__c/fields/interna_anteckningar_person1__c.field-meta.xml
<CustomField>
    <fullName>interna_anteckningar_person1__c</fullName>
    <label>Person 1 Interna anteckningar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>