force-app/main/default/objects/df_journal_se_new__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipName>df_journal_se_new</relationshipName>
    <type>Lookup</type>
</CustomField>