force-app/main/default/objects/df_journal_se_new__c/fields/journal_name__c.field-meta.xml
<CustomField>
    <fullName>journal_name__c</fullName>
    <label>Journal name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>