force-app/main/default/objects/df_journal_se_new__c/fields/likadelning__c.field-meta.xml
<CustomField>
    <fullName>likadelning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Likadelning</label>
    <type>Checkbox</type>
</CustomField>