force-app/main/default/objects/df_journal_se_new__c/fields/likadelning_mellan_barn_singel__c.field-meta.xml
<CustomField>
    <fullName>likadelning_mellan_barn_singel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Likadelning mellan barn (Singel)</label>
    <type>Checkbox</type>
</CustomField>