force-app/main/default/objects/df_journal_se_new__c/fields/medlemskap__c.field-meta.xml
<CustomField>
    <fullName>medlemskap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>0 kr.</description>
    <label>Medlemskap</label>
    <type>Checkbox</type>
</CustomField>