force-app/main/default/objects/df_journal_se_new__c/fields/medlemskap_p2__c.field-meta.xml
<CustomField>
    <fullName>medlemskap_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medlemskap</label>
    <type>Checkbox</type>
</CustomField>