force-app/main/default/objects/df_journal_se_new__c/fields/Month_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Birth__c</fullName>
    <formula>MID(personnummer_person1__c, 5, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Birth</label>
    <type>Text</type>
</CustomField>