force-app/main/default/objects/df_journal_se_new__c/fields/om_ja_ska_bestmmelsen_om_vrdnads_228__c.field-meta.xml
<CustomField>
    <fullName>om_ja_ska_bestmmelsen_om_vrdnads_228__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Om ja, ska bestämmelsen om vårdn d3eb0</label>
    <type>Checkbox</type>
</CustomField>