force-app/main/default/objects/df_journal_se_new__c/fields/Person_1_Age__c.field-meta.xml
<CustomField>
    <fullName>Person_1_Age__c</fullName>
    <formula>IF(
    OR(
        MONTH(TODAY()) &gt; MONTH( DATE(
            VALUE(LEFT(personnummer_person1__c,4)),
            VALUE(MID(personnummer_person1__c,5,2)),
            VALUE(MID(personnummer_person1__c,7,2))
        )),
        AND(
            MONTH(TODAY()) = MONTH( DATE(
                VALUE(LEFT(personnummer_person1__c,4)),
                VALUE(MID(personnummer_person1__c,5,2)),
                VALUE(MID(personnummer_person1__c,7,2))
            )),
            DAY(TODAY()) &gt;= DAY( DATE(
                VALUE(LEFT(personnummer_person1__c,4)),
                VALUE(MID(personnummer_person1__c,5,2)),
                VALUE(MID(personnummer_person1__c,7,2))
            ))
        )
    ),
    YEAR(TODAY()) - YEAR(DATE(
        VALUE(LEFT(personnummer_person1__c,4)),
        VALUE(MID(personnummer_person1__c,5,2)),
        VALUE(MID(personnummer_person1__c,7,2))
    )),
 YEAR(TODAY()) - YEAR(DATE(
        VALUE(LEFT(personnummer_person1__c,4)),
        VALUE(MID(personnummer_person1__c,5,2)),
        VALUE(MID(personnummer_person1__c,7,2))
    )) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person 1 Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>