force-app/main/default/objects/df_journal_se_new__c/fields/person_2_personnummer__c.field-meta.xml
<CustomField>
    <fullName>person_2_personnummer__c</fullName>
    <label>Person 2 personnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>