force-app/main/default/objects/df_journal_se_new__c/fields/person_2_postnummer__c.field-meta.xml
<CustomField>
    <fullName>person_2_postnummer__c</fullName>
    <label>Person 2 postnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>