force-app/main/default/objects/df_journal_se_new__c/fields/person_2_stad__c.field-meta.xml
<CustomField>
    <fullName>person_2_stad__c</fullName>
    <label>Person 2 stad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>