force-app/main/default/objects/df_journal_se_new__c/fields/personliga_frhllanden_p2__c.field-meta.xml
<CustomField>
    <fullName>personliga_frhllanden_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personliga förhållanden</label>
    <type>Checkbox</type>
</CustomField>