force-app/main/default/objects/df_journal_se_new__c/fields/personnummer_granskare__c.field-meta.xml
<CustomField>
    <fullName>personnummer_granskare__c</fullName>
    <label>Personnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>