force-app/main/default/objects/df_journal_se_new__c/fields/personnummer_primr_srskild_frval_281__c.field-meta.xml
<CustomField>
    <fullName>personnummer_primr_srskild_frval_281__c</fullName>
    <label>Personnummer 0bdb2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>