force-app/main/default/objects/df_journal_se_new__c/fields/presenter_till_vlgrenhet__c.field-meta.xml
<CustomField>
    <fullName>presenter_till_vlgrenhet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presenter till välgörenhet?</label>
    <type>Checkbox</type>
</CustomField>