force-app/main/default/objects/df_journal_se_new__c/fields/primr_fullmaktshavare_efternamn_300__c.field-meta.xml
<CustomField>
    <fullName>primr_fullmaktshavare_efternamn_300__c</fullName>
    <label>Primär fullmaktshavare efternamn e5b04</label>
    <length>255</length>
    <type>Text</type>
</CustomField>