force-app/main/default/objects/df_journal_se_new__c/fields/primr_fullmaktshavare_frnamn_per_299__c.field-meta.xml
<CustomField>
    <fullName>primr_fullmaktshavare_frnamn_per_299__c</fullName>
    <label>Primär fullmaktshavare förnamn ( 60ad5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>