force-app/main/default/objects/df_journal_se_new__c/fields/primr_fullmaktshavare_personnumm_298__c.field-meta.xml
<CustomField>
    <fullName>primr_fullmaktshavare_personnumm_298__c</fullName>
    <label>Primär fullmaktshavare personnum 03928</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>