force-app/main/default/objects/df_journal_se_new__c/fields/primr_fullmaktshavare_personnumm_301__c.field-meta.xml
<CustomField>
    <fullName>primr_fullmaktshavare_personnumm_301__c</fullName>
    <label>Primär fullmaktshavare personnum 2e05e</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>