force-app/main/default/objects/df_journal_se_new__c/fields/primr_vrdnadshavare_frnamn__c.field-meta.xml
<CustomField>
    <fullName>primr_vrdnadshavare_frnamn__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>