force-app/main/default/objects/df_journal_se_new__c/fields/primr_vrdnadshavare_personnummer__c.field-meta.xml
<CustomField>
    <fullName>primr_vrdnadshavare_personnummer__c</fullName>
    <label>Primär vårdnadshavare personnumm d2658</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>