force-app/main/default/objects/df_journal_se_new__c/fields/produkter_framtidsfullmakt__c.field-meta.xml
<CustomField>
    <fullName>produkter_framtidsfullmakt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1.990 kr.</description>
    <label>Framtidsfullmakt</label>
    <type>Checkbox</type>
</CustomField>