force-app/main/default/objects/df_journal_se_new__c/fields/produkter_ktenskapsfrord__c.field-meta.xml
<CustomField>
    <fullName>produkter_ktenskapsfrord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>3.890 kr.</description>
    <label>Äktenskapsförord</label>
    <type>Checkbox</type>
</CustomField>