force-app/main/default/objects/df_journal_se_new__c/fields/produkter_samboavtal__c.field-meta.xml
<CustomField>
    <fullName>produkter_samboavtal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2.090 kr.</description>
    <label>Samboavtal</label>
    <type>Checkbox</type>
</CustomField>