force-app/main/default/objects/df_journal_se_new__c/fields/produkter_samganderttsavtal__c.field-meta.xml
<CustomField>
    <fullName>produkter_samganderttsavtal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>4.890 kr.</description>
    <label>Samäganderättsavtal</label>
    <type>Checkbox</type>
</CustomField>