force-app/main/default/objects/df_journal_se_new__c/fields/produkter_skuldebrev__c.field-meta.xml
<CustomField>
    <fullName>produkter_skuldebrev__c</fullName>
    <defaultValue>false</defaultValue>
    <description>995 kr.</description>
    <label>Skuldebrev</label>
    <type>Checkbox</type>
</CustomField>