force-app/main/default/objects/df_journal_se_new__c/fields/produkter_testamente__c.field-meta.xml
<CustomField>
    <fullName>produkter_testamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>4.290 kr.</description>
    <label>Testamente</label>
    <type>Checkbox</type>
</CustomField>