force-app/main/default/objects/df_journal_se_new__c/fields/produkter_vrdnadstestamente__c.field-meta.xml
<CustomField>
    <fullName>produkter_vrdnadstestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1.490 kr.</description>
    <label>Vårdnadstestamente</label>
    <type>Checkbox</type>
</CustomField>