force-app/main/default/objects/df_journal_se_new__c/fields/r_alla_barn_myndiga__c.field-meta.xml
<CustomField>
    <fullName>r_alla_barn_myndiga__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är alla barn myndiga?</label>
    <type>Checkbox</type>
</CustomField>