force-app/main/default/objects/df_journal_se_new__c/fields/r_det_en_fullstndig_framtidsfull_283__c.field-meta.xml
<CustomField>
    <fullName>r_det_en_fullstndig_framtidsfull_283__c</fullName>
    <label>Är det en fullständig framtidsfu 5684b</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>fullstndig_person2</fullName>
                <label>Fullständig</label>
            </value>
            <value>
                <fullName>skal_specificeras_p2</fullName>
                <label>Skal specificeras</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>