force-app/main/default/objects/df_journal_se_new__c/fields/r_det_to_gensidige_framtidsfullm_240__c.field-meta.xml
<CustomField>
    <fullName>r_det_to_gensidige_framtidsfullm_240__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är det to gensidige framtidsfull ca2a7</label>
    <type>Checkbox</type>
</CustomField>