force-app/main/default/objects/df_journal_se_new__c/fields/r_fullmaktshavare_barn_p2__c.field-meta.xml
<CustomField>
    <fullName>r_fullmaktshavare_barn_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är fullmaktshavare barn?</label>
    <type>Checkbox</type>
</CustomField>