force-app/main/default/objects/df_journal_se_new__c/fields/r_fullmaktshavare_en_av_dina_and_267__c.field-meta.xml
<CustomField>
    <fullName>r_fullmaktshavare_en_av_dina_and_267__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är fullmaktshavaren en av dina a c4d75</label>
    <type>Checkbox</type>
</CustomField>