force-app/main/default/objects/df_journal_se_new__c/fields/r_fullmaktshavare_vrdnadshavare_285__c.field-meta.xml
<CustomField>
    <fullName>r_fullmaktshavare_vrdnadshavare_285__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är fullmaktshavare vårdnadshavar 86175</label>
    <type>Checkbox</type>
</CustomField>