force-app/main/default/objects/df_journal_se_new__c/fields/r_fullmaktshavaren_en_av_dina_an_284__c.field-meta.xml
<CustomField>
    <fullName>r_fullmaktshavaren_en_av_dina_an_284__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är fullmaktshavaren en av dina a c4d75</label>
    <type>Checkbox</type>
</CustomField>