force-app/main/default/objects/df_journal_se_new__c/fields/ska_all_egendom_vara_enskild_ege_282__c.field-meta.xml
<CustomField>
    <fullName>ska_all_egendom_vara_enskild_ege_282__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska all egendom vara enskild ege 7e07b</label>
    <type>Checkbox</type>
</CustomField>