force-app/main/default/objects/df_journal_se_new__c/fields/ska_arvet_fras_vidare_som_enskil_223__c.field-meta.xml
<CustomField>
    <fullName>ska_arvet_fras_vidare_som_enskil_223__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska arvet föras vidare som enski ad188</label>
    <type>Checkbox</type>
</CustomField>