force-app/main/default/objects/df_journal_se_new__c/fields/ska_arvet_villkoras__c.field-meta.xml
<CustomField>
    <fullName>ska_arvet_villkoras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska arvet villkoras?</label>
    <type>Checkbox</type>
</CustomField>