force-app/main/default/objects/df_journal_se_new__c/fields/ska_de_lngst_levande_f_arvet_som_232__c.field-meta.xml
<CustomField>
    <fullName>ska_de_lngst_levande_f_arvet_som_232__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska de längst levande få arvet s 78adf</label>
    <type>Checkbox</type>
</CustomField>