force-app/main/default/objects/df_journal_se_new__c/fields/ska_det_infogas_andra_fullmaktsh_286__c.field-meta.xml
<CustomField>
    <fullName>ska_det_infogas_andra_fullmaktsh_286__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska det infogas andra fullmaktsh ae4ac</label>
    <type>Checkbox</type>
</CustomField>