force-app/main/default/objects/df_journal_se_new__c/fields/ska_det_insttas_granskare__c.field-meta.xml
<CustomField>
    <fullName>ska_det_insttas_granskare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska det insättas granskare?</label>
    <type>Checkbox</type>
</CustomField>