force-app/main/default/objects/df_journal_se_new__c/fields/ska_det_insttas_granskare_person_307__c.field-meta.xml
<CustomField>
    <fullName>ska_det_insttas_granskare_person_307__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska det insättas granskare? (Per a7808</label>
    <type>Checkbox</type>
</CustomField>